--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "dotenv": "^8.2.0",
+    "ethers": "^5.0.24",
     "next": "10.0.3",
     "next-routes": "^1.4.2",
     "react": "17.0.1",
